# marvelous-databricks-course-marcodn-tuidi

./: .pre-commit-config.yaml  databricks.yml  main.py  project_config.yml  prova.py  pyproject.toml  pytest.ini  train_model.py
.github/: CODEOWNERS
notebooks/: fe_model_serving.py  fe_model_serving_test.py  feature_serving_batch.py  feature_serving_batch_test.py  model_serving.py  model_serving_ab_test.py  model_serving_ab_test_test.py  model_serving_test.py  simple_model_serving.py  simple_model_serving_test.py  train_fe.py
src/: deploy.py  evaluate.py  log_model_test_wrapper.py  main.py  make_source_table.py  preprocess_new_data.py  train_fe_model.py  train_model.py  train_model_ab_testing.py  train_model_prob.py  train_model_simple.py  update_source_table.py
src/personality_types/: config.py  custom_transforms.py  data_processor.py  fe_setup.py  log_from_fe_dataset.py  models_comparator.py  new_data_preprocessor.py  personality_model.py  personality_model_prob.py  registered_model_serving.py  test_model_wrapper.py  train_model.py
src/personality_types/utils/: dbutils_utils.py  logger_utils.py  predictions_utils.py  source_table_update_utils.py
src/utils/: delta_utils.py  logger_utils.py
tests/: conftest.py  test_custom_transforms.py  test_data_processor.py
train/: train_fe.py  train_model.py  train_model_prob.py  train_model_simple.py
